Fix progress bar overflowing container because of margin. border-sizing: content-box exists but only accounts for padding

--- a/client/main.scss
+++ b/client/main.scss
@@ -98,9 +98,11 @@ ul {
 		cursor: pointer;
 	}
 	#prog {
-		height: 4px;
-		width: 0;
 		margin: 8px;
-		background: $orange;
+		#bar {
+			background: $orange;
+			width: 0;
+			height: 4px;
+		}
 	}
 }
